# pandoc-preview

./: .agents  .github-dashboard-e2e-e2e-label-pr-1781951671053.md  .github-dashboard-e2e-e2e-label-pr-1781952169464.md  .github-dashboard-e2e-e2e-label-pr-1781952667439.md  .github-dashboard-e2e-e2e-label-pr-1781953301029.md  .github-dashboard-e2e-e2e-label-pr-1781954833617.md  .github-dashboard-e2e-e2e-label-pr-1781955469878.md  .github-dashboard-e2e-e2e-label-pr-1781956096740.md  .github-dashboard-e2e-e2e-label-pr-1781956589474.md  .github-dashboard-e2e-e2e-label-pr-1781957164319.md  .github-dashboard-e2e-e2e-label-pr-1781957546645.md  .gitignore  .gitmodules  AGENTS.md  README.md  index.html  justfile  package.json  tsconfig.json  vite.config.ts
.agents/: check-proof-vite-port-guard.sh  justfile  render-rebuild-plan.md
.agents/memories/: architecture-path-fork-biased-inkwell-first.md  architecture-plugin-system-audit-2026-06-15-b924653.md  competitive-parity-roadmap.md  config.toml  contract-invariants-and-ownership-boundaries.md  (+43 more)
.serena/: project.yml
proof-artifacts/: run-20260612T143244Z.json  run-20260612T143926Z.json  run-20260612T144005Z.json  run-20260612T144014Z.json  run-20260612T144916Z.json  run-20260612T150015Z.json  run-20260612T155623Z.json  run-20260612T160900Z.json  run-20260612T161615Z.json  run-20260612T162009Z.json  run-20260612T163000Z.json  run-20260612T163410Z.json  run-20260612T163527Z.json  run-20260612T164820Z.json  run-20260612T165311Z.json  run-20260612T165421Z.json  run-20260612T165600Z.json  run-20260612T170047Z.json  run-20260612T170350Z.json  run-20260612T190323Z.json  run-20260612T190450Z.json  run-20260612T190523Z.json  run-20260612T190826Z.json  run-20260612T191236Z.json  run-20260612T193207Z.json  run-20260612T194312Z.json  run-20260612T194504Z.json  run-20260612T195206Z.json  run-20260613T103627Z.json  run-20260613T103917Z.json  run-20260613T104346Z.json  run-20260613T105352Z.json  run-20260613T105701Z.json  run-20260613T112550Z.json  run-20260613T112701Z.json  run-20260613T115624Z.json  run-20260613T115830Z.json  run-20260613T115903Z.json  run-20260613T122603Z.json  run-20260613T122637Z.json  (+734 more)
scripts/: check-no-pandoc-in-core.sh  convert-quicktex.py  dev.sh  drive-configure.py  drive-dev.py  drive-first-run.py  drive-launcher.py  first-run.sh  install-assets.sh  launch.sh  lib-recovery.sh  pr-sync.py  proof-run.sh  provision-proof.sh
src/: App.svelte  app.css  main.ts  nspell.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/dictionaries/: PROVENANCE  corpus.add  mathdict.add
src-tauri/resources/mathjax/: PROVENANCE
src-tauri/resources/snippets/: PROVENANCE  quicktex.json
src-tauri/resources/tikz-commands/: PROVENANCE  convert-tikzcommands.py  tikzcommands.json
src-tauri/src/: clipboard.rs  config.rs  doctor.rs  error.rs  fsops.rs  lib.rs  lint.rs  main.rs  plugins.rs  recovery.rs  render.rs  repostate.rs  tikz.rs
src-tauri/tests/: tikz_roundtrip.rs
src-tauri/tests/fixtures/tikz/: commutative_square.tikz  malformed_unterminated_node.tikz  string_diagram.tikz
(+269 files in other folders)
