[package]
name = "pandoc-preview"
version = "0.1.0"
description = "Overleaf-style markdown editor with a pandoc preview backend"
edition = "2021"

[lib]
name = "pandoc_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
# Encode the clipboard image's RGBA pixels to a real PNG file in the configured
# figures dir (P62: insert image from clipboard). `png` is already in the lock
# graph transitively; it is the minimal raw-RGBA→PNG encoder (no decoder/format
# bloat from a full image toolkit).
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# preserve_order keeps the [export.<id>] tables in the file's declaration order
# (the Export menu and the doctor iterate them in config order, not alphabetical).
toml = { version = "0.8", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
dirs = "5"
thiserror = "2"
# Build a correct `file://` URL for the bundled MathJax passed to pandoc's
# `--mathjax= {mathjax}` (decision A). Already in the lock graph transitively.
url = "2"
# Generic plugin-config validation (Milestone A): every [plugin.<id>] section is
# validated against the plugin's declared JSON Schema by ONE code path. Schemas
# are local files with no remote $refs, so the network resolver is disabled.
jsonschema = { version = "0.40", default-features = false }
# Host-filesystem recovery store (P45): every autosave of the unsaved buffer is
# a commit into a local-only git object database under the XDG data dir. libgit2
# is statically vendored (no system git binary, no ambient discovery); the store
# has no remotes, so the https/openssl transport features are disabled.
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

# E2E proof harness: the in-app Playwright socket bridge. Gated behind the
# `e2e-testing` cargo feature so a normal user build never embeds it. The
# proof binary (scripts/proof-run.sh) builds with --features e2e-testing.
tauri-plugin-playwright = { version = "0.4", optional = true }

[features]
# dynamic-acl lets the e2e build grant the playwright plugin's pw_result
# permission at runtime (inside the cfg block), so a user build's capability
# set is untouched.
e2e-testing = ["dep:tauri-plugin-playwright", "tauri/dynamic-acl"]
